burger menu for cadastrapp, fixed horizontal scroll

--- a/web/client/themes/default/less/cadastrapp-mockup.less
+++ b/web/client/themes/default/less/cadastrapp-mockup.less
@@ -70,9 +70,20 @@
         color: #078aa3;
     }
 
+    .row{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .col-sm-12{
+        margin-left: 0;
+        margin-right: 0;
+    }
+
     .btn-group{
         float: right;
-        margin: 10px;
+        margin: 5px;
+        margin-right: 10px;
     }
 
     .owners-search, .coownership-search, .plots-search{
